# marconi

./: .envrc  .gitignore  .readthedocs.yml  .stylish-haskell.yaml  CONTRIBUTING.adoc  README.adoc  REPORT.md  STYLEGUIDE.adoc  _.envrc  book.toml  cabal.project  flake.nix  flake2.nix  fourmolu.yaml  marconi.cabal
doc/read-the-docs-site/: README.md  conf.py  default.nix  index.rst  marconi-doc.cabal  requirements.txt
doc/read-the-docs-site/adr/: 0001-record-architecture-decisions.rst  0002-indexer-resuming-strategy.rst  0002-marconi-initiative.rst  0003-marconi-indexer-rollbacks.rst  0003-observability.rst  0004-marconi-query-interface.rst  0004-marconi-sidechain-testing-strategy.rst  0005-marconi-indexers-query-synchronisation-primitive.rst  0006-indexer-resuming-strategy.rst  0007-observability.rst  0008-marconi-sidechain-testing-strategy.rst  index.rst
doc/read-the-docs-site/architecture/: appendix.rst  building-blocks-view.rst  comparison-other-chain-indexing-projects.rst  component-diagram.rst  index.rst  key-concepts.rst  local-node-communication.rst  marconi-as-a-node.rst  marconi-core-building-blocks.rst  repository-structure.rst  runtime-view.rst  sequence-diagram.rst  system-context.rst  use-case-diagram.rst
doc/read-the-docs-site/doc/: introduction.rst  overview.rst
doc/read-the-docs-site/doc/marconi-as-a-library/: additional-links.rst  index.rst  overview.rst  quickstart.rst
doc/read-the-docs-site/doc/marconi-as-a-library/cookbook/: index.rst
doc/read-the-docs-site/doc/marconi-as-a-library/tutorials/: BasicApp.hs  BasicAppSpec.hs  how-to-query-first-indexer.rst  how-to-reuse-existing-indexers.rst  how-to-run-several-indexers.rst  how-to-test-first-indexer.rst  index.rst  write-first-indexer.rst
doc/read-the-docs-site/doc/marconi-cardano-chain-index/: index.rst  openapi-spec.rst  overview.rst
doc/read-the-docs-site/doc/marconi-chain-index/: index.rst  quickstart.rst
doc/read-the-docs-site/doc/marconi-predefined-indexers/: index.rst
doc/read-the-docs-site/doc/tutorials/: index.rst
marconi-cardano-chain-index/: README.md  marconi-cardano-chain-index.cabal
marconi-cardano-chain-index/app/: Main.hs
marconi-cardano-chain-index/changelog.d/: 20230417_103501_nicolas.biri_error_handling.md  20230523_082120_nicolas.biri_future_spent.md
marconi-cardano-chain-index/snapshot/: Main.hs
marconi-cardano-chain-index/src/Marconi/Cardano/ChainIndex/: CLI.hs  Error.hs  Indexers.hs  Run.hs  SecurityParam.hs  Utils.hs
marconi-cardano-chain-index/src/Marconi/ChainIndex/: CLI.hs  Utils.hs
marconi-cardano-chain-index/src/Marconi/ChainIndex/Api/: Routes.hs
marconi-cardano-chain-index/src/Marconi/ChainIndex/Git/: Rev.hs
marconi-cardano-chain-index/test/: Spec.hs
marconi-cardano-chain-index/test/Spec/Golden/Routes/: epoch-nonce-response.json  (+3 more)
marconi-cardano-core/: CHANGELOG.md  README.md  marconi-cardano-core.cabal
marconi-cardano-core/test/: Spec.hs
marconi-cardano-indexers/: CHANGELOG.md  README.md  marconi-cardano-indexers.cabal
marconi-cardano-indexers/src/Marconi/Cardano/: Indexers.hs
marconi-cardano-indexers/test/: Spec.hs
marconi-cardano-indexers/test-lib/Test/: Helpers.hs  Integration.hs
marconi-cardano-indexers/test/Spec/: README.md
marconi-chain-index/: README.md  README_MARCONI_DRAFT.md  README_alpha-release.md  marconi-chain-index.cabal
marconi-chain-index/app/: Experimental.hs  Main.hs
marconi-chain-index/bench/: BenchQueries.hs
marconi-chain-index/src/Marconi/ChainIndex/: CLI.hs  Error.hs  Indexers.hs  Logger.hs  Logging.hs  Orphans.hs  Run.hs  Runner.hs  Types.hs  Utils.hs
marconi-chain-index/src/Marconi/Git/: Rev.hs  RevFromGit.hs
marconi-chain-index/test/: CompareToDbSync.hs  Integration.hs  Spec.hs
marconi-chain-index/test-compare-cardano-db-sync/: DBUtils.hs  EpochState.hs  Spec.hs  Utxo.hs
marconi-chain-index/test-lib/: Helpers.hs
marconi-chain-index/test-lib/Test/: Helpers.hs  Integration.hs
marconi-core/: README.md  marconi-core.cabal
marconi-core-json-rpc/: README.md  marconi-core-json-rpc.cabal
marconi-core-json-rpc/src/Marconi/Core/: JsonRpc.hs
marconi-core-json-rpc/src/Network/JsonRpc/: Types.hs
marconi-core/changelog.d/: 20230417_103947_nicolas.biri_error_handling.md
marconi-core/src/Marconi/: Core.hs
marconi-core/src/Marconi/Core/: Class.hs  Coordinator.hs  Experiment.hs  Preprocessor.hs  Query.hs  ResumableInterval.hs  Storable.hs  TracedStorable.hs  Type.hs  Worker.hs
marconi-core/test/: Spec.hs
marconi-core/test/Marconi/: CoreSpec.hs
marconi-core/test/Marconi/Core/: Model.hs
marconi-sidechain/: README.md  marconi-sidechain.cabal
marconi-sidechain-experimental/: CHANGELOG.md  README.md  marconi-sidechain-experimental.cabal
marconi-sidechain-experimental/app/: Main.hs
marconi-sidechain-experimental/test/: Spec.hs
marconi-sidechain-node/marconi-sidechain-node/: README.md  marconi-sidechain-node.cabal
marconi-sidechain-node/marconi-sidechain-node/app/: Main.hs
marconi-sidechain-node/marconi-sidechain-node/doc/: ARCHITECTURE.adoc
marconi-sidechain/app/: Main.hs
marconi-sidechain/changelog.d/: 20230523_081752_nicolas.biri_future_spent.md
marconi-sidechain/db-utils/: README.md
marconi-sidechain/db-utils/exe/: Main.hs
marconi-sidechain/doc/: API.adoc
marconi-sidechain/doc/adr/: 01-sdd-computation.adoc
marconi-sidechain/examples/: README.md  run-pre-prod-queries  run-pre-prod-queries.sh  test-json-rpc.http
marconi-sidechain/examples/json-rpc-client/src/: Main.hs
marconi-sidechain/examples/json-rpc-server/src/: Main.hs
marconi-sidechain/src/Marconi/Sidechain/: Bootstrap.hs  CLI.hs  Concurrency.hs  Env.hs  Error.hs  Indexers.hs  Run.hs  Utils.hs
marconi-sidechain/test/: Spec.hs
marconi-starter/: NOTICE  marconi-starter.cabal
marconi-starter/app/: Main.hs
marconi-starter/src/Marconi/Starter/: CLI.hs  Env.hs  HttpServer.hs  Indexers.hs  Run.hs
marconi-starter/test/: Driver.hs
marconi-tutorial/: marconi-tutorial.cabal
marconi-tutorial/app/: Main.hs
marconi-tutorial/src/Marconi/Tutorial/: CLI.hs  Env.hs  HttpServer.hs  Indexers.hs  Run.hs
(+938 files in other folders)
