cabal-version: 2.2
name:          marconi
version:       0.1.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    radu.ometita@eiohk.io
author:        Radu Ometita
homepage:      https://github.com/input-output-hk/marconi#readme
bug-reports:   https://github.com/input-output-hk/marconi/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/marconi#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marconi


executable marconi
  main-is:            Main.hs
  hs-source-dirs:     src
  other-modules:
    Marconi.Index.Datum
    Marconi.Index.Utxo
    Marconi.Logging
    Marconi.Orphans

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wno-missing-import-lists -Wredundant-constraints -O0
    -Wunused-packages

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
      cardano-api
    , iohk-monitoring
    , plutus-ledger-api
    , plutus-hysterical-screams
    , plutus-ledger
    , plutus-streaming

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
      base                  >=4.9 && <5
    , bytestring
    , containers
    , lens
    , mwc-random
    , optparse-applicative
    , prettyprinter
    , serialise
    , sqlite-simple
    , stm
    , streaming
    , text
    , time


