cabal-version: 2.2
name:          marconi
version:       0.1.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:    radu.ometita@eiohk.io
author:        Radu Ometita
homepage:      https://github.com/input-output-hk/marconi#readme
bug-reports:   https://github.com/input-output-hk/marconi/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/marconi#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marconi

executable marconi
  main-is:            Main.hs
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:
      base                  >=4.9 && <5


