cabal-version: 3.0
name:          marconi-cardano-core
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

author:        IOHK
maintainer:    operations@iohk.io
homepage:      https://github.com/input-output-hk/marconi#readme
bug-reports:   https://github.com/input-output-hk/marconi/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/marconi#readme>.

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marconi

flag ci
  description: Toggle features on/off when in CI
  manual:      True
  default:     True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Marconi.Cardano.Core.Extract.WithDistance
    Marconi.Cardano.Core.Indexer.Worker
    Marconi.Cardano.Core.Logger
    Marconi.Cardano.Core.Node.Client.Retry
    Marconi.Cardano.Core.Orphans
    Marconi.Cardano.Core.Runner
    Marconi.Cardano.Core.Transformer.WithSyncStats
    Marconi.Cardano.Core.Transformer.WithSyncStats.Backend.Printer
    Marconi.Cardano.Core.Transformer.WithSyncStats.Backend.Prometheus
    Marconi.Cardano.Core.Types

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-api-extended
    , marconi-core

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api                  ^>=8.20
    , cardano-binary
    , cardano-ledger-shelley
    , iohk-monitoring
    , network-mux
    , ouroboros-consensus
    , ouroboros-consensus-cardano

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base                 >=4.9 && <5
    , bytestring
    , cborg
    , containers
    , lens
    , mtl
    , nonempty-containers
    , prettyprinter
    , prometheus-client
    , serialise
    , sop-core
    , sqlite-simple
    , stm
    , streaming
    , strict-sop-core
    , text
    , time

library cardano-api-extended
  import:          lang
  visibility:      public
  hs-source-dirs:  cardano-api-extended/src
  exposed-modules:
    Cardano.Api.Extended
    Cardano.Api.Extended.Block
    Cardano.Api.Extended.ExtLedgerState
    Cardano.Api.Extended.Gen
    Cardano.Api.Extended.IPC
    Cardano.Api.Extended.Streaming
    Cardano.Api.Extended.Streaming.Callback
    Cardano.Api.Extended.Streaming.ChainSyncEvent

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , async
    , base
    , base16-bytestring
    , bytestring
    , cardano-api                    ^>=8.20
    , cardano-crypto-class
    , cardano-crypto-wrapper
    , cardano-ledger-byron
    , cardano-slotting
    , hedgehog
    , memory
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-diffusion
    , ouroboros-consensus-protocol
    , ouroboros-network-protocols
    , streaming
    , strict-sop-core
    , text
    , time
    , transformers
    , typed-protocols
