cabal-version: 3.0
name:          marconi-cardano-indexers
version:       1.2.0.0
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

author:        IOHK
maintainer:    operations@iohk.io
homepage:      https://github.com/input-output-hk/marconi#readme
bug-reports:   https://github.com/input-output-hk/marconi/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/marconi#readme>.

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/marconi

flag ci
  description: Toggle features on/off when in CI
  manual:      True
  default:     True

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    ScopedTypeVariables
    StandaloneDeriving
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules:
    Marconi.Cardano.Indexers
    Marconi.Cardano.Indexers.BlockInfo
    Marconi.Cardano.Indexers.ChainTip
    Marconi.Cardano.Indexers.Coordinator
    Marconi.Cardano.Indexers.CurrentSyncPointQuery
    Marconi.Cardano.Indexers.Datum
    Marconi.Cardano.Indexers.EpochNonce
    Marconi.Cardano.Indexers.EpochSDD
    Marconi.Cardano.Indexers.ExtLedgerStateCoordinator
    Marconi.Cardano.Indexers.MintTokenEvent
    Marconi.Cardano.Indexers.MintTokenEventQuery
    Marconi.Cardano.Indexers.Spent
    Marconi.Cardano.Indexers.SyncHelper
    Marconi.Cardano.Indexers.Utxo
    Marconi.Cardano.Indexers.UtxoQuery

  --------------------
  -- Local components
  --------------------
  build-depends:
    , marconi-cardano-core:{marconi-cardano-core, cardano-api-extended}
    , marconi-core

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api                   ^>=8.20
    , cardano-ledger-alonzo         >=1.3.1.1
    , cardano-ledger-api
    , cardano-ledger-babbage        >=1.4.0.1
    , cardano-ledger-conway         >=1.5
    , cardano-ledger-core
    , cardano-ledger-mary           >=1.3.0.2
    , cardano-ledger-shelley
    , cardano-protocol-tpraos       >=1.0.3.3
    , iohk-monitoring
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-protocol

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base               >=4.9 && <5
    , base16-bytestring
    , bytestring
    , cborg
    , containers
    , directory
    , filepath
    , lens
    , mtl
    , prettyprinter
    , sqlite-simple
    , text
    , time
    , transformers
    , vector-map
